<resources>
    <string name="app_name">VitaCare</string>
    <string name="profile_icon">Profile Icon</string>
    <string name="new_appointment_icon">New Appointment Icon</string>
    <string name="medical_record_icon">Medical Record Icon</string>
    <string name="our_locations_icon">Our Locations Icon</string>
    <string name="my_appointments_icon">My Appointments Icon</string>
    <string name="contact_us_icon">Contact Us Icon</string>
    <string name="welcome">Welcome, %1$s</string>
    <string name="welcome_to_vitacare">Welcome to VitaCare</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account_sign_up">Don’t have an Account? Sign Up</string>
    <string name="phone_number">Phone Number</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="your_trusted_companion_app">Your Trusted Companion App</string>
    <string name="new_appointment">New Appointment</string>
    <string name="medical_record">Medical Record</string>
    <string name="our_locations">Our Locations</string>
    <string name="my_appointment">My Appointment</string>
    <string name="contact_us">Contact Us</string>
    <string name="home_appointment">Home Appointment</string>
    <string name="online_consultation">Online Consultation</string>
    <string name="clinic_appointment">Clinic Appointment</string>
    <string name="symptoms_checker">Symptoms Checker</string>
    <string name="login">Login</string>
    <string name="choose_clinic">Choose Clinic</string>
    <string name="choose_doctor">Choose Doctor</string>
    <string name="have_an_account_sign_in">Have an account? Sign In</string>
    <string name="email">Email</string>
    <string name="birthdate">Birthdate</string>
    <string name="gender">Gender</string>
    <string name="enter_your_mother_s_full_name">Enter  Mother\'s Full Name</string>
    <string name="father_name">Father Name</string>
    <string name="choose_location">Choose Location</string>
    <string name="nabatieh">Nabatieh</string>
    <string name="beirut">Beirut</string>
    <string name="sour">Sour</string>
    <string name="saida">Saida</string>
    <string name="baalbeck">Baalbeck</string>
    <string name="select_major">Select Major</string>
    <string name="family_medicine">Family Medicine</string>
    <string name="pediatrics">Pediatrics</string>
    <string name="obstetrics_and_gynecology">Obstetrics and Gynecology</string>
    <string name="cardiology">Cardiology</string>
    <string name="gastroenterology">Gastroenterology</string>
    <string name="endocrinology">Endocrinology</string>
    <string name="dentist">Dentist</string>
    <string name="surgeon">Surgeon</string>
    <string name="cardiologist">Cardiologist</string>
    <string name="neurologist">Neurologist</string>
    <string name="cancel">Cancel</string>
    <string name="select">Select</string>
    <string name="dr_1_s_is_available_on_monday_wednesday_and_friday">Dr. %1$s is Available at these times</string>
    <string name="please_choose_a_time_from_the_available_list">Please choose a time from the available list:</string>
    <string name="monday_11_00_12_30">Monday: 11:00am – 12:30pm</string>
    <string name="wednesday_10_00_11_30">Wednesday: 11:00am – 12:30pm</string>
    <string name="friday_11_00_12_30">Friday: 11:00am – 12:30pm</string>
    <string name="book_your_appointment">Book Your Appointment</string>
    <string name="next">Next</string>
    <string name="patient_name">Patient Full Name</string>
    <string name="select_one_of_the_available_time_slots">Select one of the Available Time Slots:</string>
    <string name="_11_00_am">11:00 AM</string>
    <string name="_11_30_am">11:30 am</string>
    <string name="_12_00_pm">12:00 pm</string>
    <string name="_12_30_pm">12:30 pm</string>
    <string name="reserve_appointment">Reserve Appointment</string>
    <string name="my_appointments">My Appointments</string>
    <string name="delete_appointment">Delete Appointment</string>
    <string name="appointment_archive">Appointment Archive</string>
    <string name="appointment_booked">Your Appointment has been booked for %1$s On %2$s at %3$s at %4$s</string>
    <string name="complete">Complete</string>
    <string name="myprofile">MyProfile</string>
    <string name="profile_image">Profile Image</string>
    <string name="save">Save</string>
    <string name="personal_profile">Personal Profile</string>
    <string name="camera_button">Camera Button</string>
</resources>