<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/white">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp">

        <EditText
            android:id="@+id/editTextPatientName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/light_blue"
            android:hint="@string/patient_name"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="12dp"
            android:textSize="16sp"
            android:layout_marginTop="16dp"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_one_of_the_available_time_slots"
        android:textColor="@color/blue"
        android:textSize="18sp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"/>

    <RadioGroup
        android:id="@+id/radioGroupTImeSlots"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioButton1100"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_11_00_am"
            android:textSize="16sp"
            android:layout_marginBottom="8dp"/>

        <RadioButton
            android:id="@+id/radioButton1130"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_11_30_am"
            android:textSize="16sp"
            android:layout_marginBottom="8dp"/>

        <RadioButton
            android:id="@+id/radioButton1200"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_12_00_pm"
            android:textSize="16sp"
            android:layout_marginBottom="8dp"/>

        <RadioButton
            android:id="@+id/radioButton1230"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_12_30_pm"
            android:textSize="16sp"
            android:layout_marginBottom="8dp"/>
    </RadioGroup>

    <Button
        android:id="@+id/buttonFinish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="24dp"
        android:paddingVertical="12dp"
        android:backgroundTint="@color/green"
        android:text="@string/reserve_appointment"
        android:textColor="@color/white"
        android:textSize="18sp" />
</LinearLayout>
