<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:id="@+id/activity_patient_profile"
    android:padding="16dp"
    tools:context=".PatientProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/myprofile"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_centerInParent="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp">

        <ImageView
            android:id="@+id/imageViewProfilePic"
            android:layout_width="131dp"
            android:layout_height="97dp"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:background="@color/white"

            android:contentDescription="@string/profile_image"
            android:padding="16dp"
            android:scaleType="centerCrop"
            android:src="@drawable/profile_pic" />

        <ImageButton
            android:id="@+id/imageButtonUploadPic"
            android:layout_width="50dp"
            android:layout_height="47dp"
            android:layout_alignEnd="@+id/imageViewProfilePic"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="-16dp"
            android:layout_marginBottom="1dp"
            android:background="@drawable/round_button"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/camera_button"
            app:srcCompat="@drawable/photo_camera" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/personal_profile"
        android:textSize="16sp"
        android:textColor="@color/blue"
        android:layout_marginTop="16dp"
        android:layout_gravity="start" />

    <EditText
        android:id="@+id/usernameChange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_marginTop="8dp"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:backgroundTint="@color/light_blue" />

    <EditText
        android:id="@+id/phoneNumChange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:layout_marginTop="8dp"
        android:inputType="phone"
        android:padding="12dp"
        android:backgroundTint="@color/light_blue" />

    <EditText
        android:id="@+id/emailChange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginTop="8dp"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:backgroundTint="@color/light_blue" />

    <Button
        android:id="@+id/buttonSaveProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/blue"
        android:text="@string/save"
        android:textColor="@color/white" />

</LinearLayout>