<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout7"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="411dp"
        android:layout_height="95dp"
        android:background="@color/blue"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewWelcome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/welcome"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/imageViewAccountIcon"
            android:layout_width="77dp"
            android:layout_height="63dp"
            android:contentDescription="@string/profile_icon"
            android:src="@drawable/profile_pic" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/open_sans_semibold"
        android:gravity="center"
        android:text="@string/welcome_to_vitacare"
        android:textColor="@color/blue"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout9" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/open_sans_semibold"
        android:gravity="center"
        android:text="@string/your_trusted_companion_app"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView32" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:alignmentMode="alignMargins"
        android:columnCount="3"
        android:columnOrderPreserved="false"
        android:gravity="center"
        android:padding="8dp"
        android:rowCount="2"
        android:rowOrderPreserved="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView31">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <ImageView
                android:id="@+id/imageViewNewAppointment"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:contentDescription="@string/new_appointment_icon"
                android:src="@drawable/new_appointment" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_semibold"
                android:gravity="center"
                android:text="@string/new_appointment"
                android:textColor="@color/blue"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <ImageView
                android:id="@+id/imageViewMedicalRecord"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:contentDescription="@string/medical_record_icon"
                android:src="@drawable/medical_record" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_semibold"
                android:gravity="center"
                android:text="@string/medical_record"
                android:textColor="@color/blue"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <ImageView
                android:id="@+id/imageViewLocations"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:contentDescription="@string/our_locations_icon"
                android:src="@drawable/hospital_location" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_semibold"
                android:gravity="center"
                android:text="@string/our_locations"
                android:textColor="@color/blue"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <ImageView
                android:id="@+id/imageViewMyAppointments"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:contentDescription="@string/my_appointments_icon"
                android:src="@drawable/appointment_confirmed" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_semibold"
                android:gravity="center"
                android:text="@string/my_appointment"
                android:textColor="@color/blue"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <ImageView
                android:id="@+id/imageViewContactUs"
                android:layout_width="78dp"
                android:layout_height="71dp"
                android:contentDescription="@string/contact_us_icon"
                android:src="@drawable/contact_us" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_semibold"
                android:gravity="center"
                android:text="@string/contact_us"
                android:textColor="@color/blue"
                android:textSize="16sp" />
        </LinearLayout>

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
