<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DoctorsScheduleActivity">

    <TextView
        android:id="@+id/textViewIntro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="104dp"
        android:text="@string/dr_1_s_is_available_on_monday_wednesday_and_friday"
        android:textColor="@color/blue"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/please_choose_a_time_from_the_available_list"
        android:textColor="@color/green"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewIntro" />

    <RadioGroup
        android:id="@+id/radioGroupAvailableTimes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12">

        <RadioButton
            android:id="@+id/radioButtonMonday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/monday_11_00_12_30" />

        <RadioButton
            android:id="@+id/radioButtonWednesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wednesday_10_00_11_30" />

        <RadioButton
            android:id="@+id/radioButtonFriday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/friday_11_00_12_30" />

    </RadioGroup>

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="139dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="181dp"
        android:layout_marginBottom="173dp"
        android:backgroundTint="@color/green"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupAvailableTimes"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>