<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:background="@color/white">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/profile_pic"
        android:contentDescription="@string/profile_icon"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="24sp"
        android:textColor="@color/green"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/editTextLogInUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/person"
                android:ems="10"
                android:hint="@string/username"
                android:nextFocusDown="@id/editTextLogInPassword"
                android:imeOptions="actionNext"
                android:minHeight="48dp"
                android:padding="10dp"
                tools:ignore="RtlHardcoded" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/editTextLogInPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/white"
                android:drawableStart="@drawable/lock"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:nextFocusDown="@id/signInButton"
                android:imeOptions="actionNext"
                android:minHeight="48dp"
                android:padding="10dp" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <Button
        android:id="@+id/signInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/green"
        android:text="@string/sign_in"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textViewSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:minHeight="48dp"
        android:onClick="onSignUpClick"
        android:text="@string/don_t_have_an_account_sign_up"
        android:textColor="@color/blue" />

</LinearLayout>
