<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">

    <TextView
        android:id="@+id/textViewApprovement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appointment_booked"
        android:textSize="20sp"
        android:textColor="@color/blue"
        android:gravity="center"
        android:layout_marginBottom="32dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonCancelApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green"
            android:text="@string/cancel"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/buttonComplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/green"
            android:layout_marginStart="8dp"
            android:text="@string/complete"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>
